feat: 템플릿 붙여넣기 등록(html 텍스트 필드)
